--- a/zoom/manifest.json
+++ b/zoom/manifest.json
@@ -1,19 +1,24 @@
 {
   "short_name": "NextMeet",
-  "name": "NextMeet Live Video",
-  "description": "Next-Gen Video Conferencing by Ensar Gashi",
+  "name": "NextMeet",
   "icons": [
     {
       "src": "https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/bolt.svg",
       "type": "image/svg+xml",
+      "sizes": "192x192",
+      "purpose": "any"
+    },
+    {
+      "src": "https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/bolt.svg",
+      "type": "image/svg+xml",
       "sizes": "512x512",
-      "purpose": "any maskable"
+      "purpose": "maskable"
     }
   ],
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
-  "orientation": "portrait-primary",
+  "orientation": "portrait",
   "theme_color": "#000000",
   "background_color": "#000000"
 }
